--- a/Includes/CSS/menu.css
+++ b/Includes/CSS/menu.css
@@ -1,7 +1,7 @@
 header {
 	font-family: "Comfortaa", sans-serif;
 	display: flex;
-	background: #14bdeb;
+	background: #2c3d2a;
 	width: 100%;
 	height: 75px;
 	padding: 0vh 5vw;
